--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,21 +1,34 @@
 <h1>Listing artists</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @artists.each do |artist| %>
-  <tr>
-    <td><%= artist.name %></td>
-    <td><%= link_to 'Show', artist %></td>
-    <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
-    <td><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+<table class="eight">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Songs</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+  <% @artists.each do |artist| %>
+    <tr>
+      <td><%= artist.name %></td>
+      <td>
+        <ul style="list-style-type: none;">
+          <% artist.songs.each do |song| %>
+            <li><%= song.name %></li>
+          <% end %>
+        </ul>
+      </td>
+      <td>
+        <ul class='button-group radius'>
+          <li><%= link_to 'Show', artist, class: "round button small success" %></li>
+          <li><%= link_to 'Edit', edit_artist_path(artist), class: "round button small secondary" %></li>
+          <li><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' }, class: "round button small alert" %></li>
+        </ul>
+      </td>
+    </tr>
+  <% end %>
+  </tbody>
 </table>
 
 <br />
