add Top Nav and build more resources in the rake script

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= yield %>
+	<div class="eight">
+		<%= render 'layouts/top_nav' %>
+	  <%= yield %>
+	</div>
 </body>
 </html>
